--- a/css/base.css
+++ b/css/base.css
@@ -21,3 +21,11 @@ body {
 	font-size: 3rem;
 	text-decoration: 2px solid underline;
 }
+
+.body-memorygame {
+	width: 100%;
+	height: 100vh;
+	max-width: 1440px;
+	margin: auto;
+	background-color: #333;
+}
