--- a/css/base.css
+++ b/css/base.css
@@ -29,3 +29,22 @@ body {
 	margin: auto;
 	background-color: #333;
 }
+
+
+footer {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 100px;
+	background-color: #444;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+footer a {
+	text-decoration: none;
+	color: #fff;
+	font-size: 2rem;
+}
