--- a/css/base.css
+++ b/css/base.css
@@ -30,6 +30,14 @@ body {
 	background-color: #333;
 }
 
+.body-whackamole {
+	width: 100%;
+	height: 100vh;
+	max-width: 1440px;
+	margin: auto;
+	background-color: #333;
+}
+
 
 footer {
 	position: absolute;
