--- a/css/modules/whackamole.css
+++ b/css/modules/whackamole.css
@@ -1,4 +1,30 @@
 .body-whackamole__whackamole {
 	width: 100%;
 	height: 100%;
+	color: #fff;
+}
+
+.whackamole-grid-container {
+	width: 70%;
+	margin: auto;
+	height: 70%;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(3, 1fr);
+
+}
+
+.whackamole-grid-container__square {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: 1px solid #fff;
+}
+
+.square__mole {
+	background-image: url(../../assets/whackamole/mole.png);
+	background-repeat: no-repeat;
+	background-size: cover;
 }
