--- a/css/base.css
+++ b/css/base.css
@@ -38,6 +38,14 @@ body {
 	background-color: #333;
 }
 
+.body-breakout {
+	width: 100%;
+	height: 100vh;
+	max-width: 1440px;
+	margin: auto;
+	background-color: #333;
+}
+
 
 footer {
 	position: absolute;
