--- a/css/main.css
+++ b/css/main.css
@@ -6,3 +6,4 @@
 @import url(./modules/RockPaperScissors.css);
 @import url(./modules/memorygame.css);
 @import url(./modules/whackamole.css);
+@import url(./modules/breakout.css);
